force-app/main/default/objects/GBC_Order__c/fields/GBC_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>GBC_Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Наличные</fullName>
            </value>
            <value>
                <fullName>Рассрочка</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>