force-app/main/default/objects/GBC_Order__c/fields/GBC_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>GBC_Total_Price__c</fullName>
    <label>Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>